Make entities spawn with name
Names are not visible by default because they are added to a scoreboard team when spawned and players are not added to that team when joined

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -50,3 +50,104 @@ deathCauses:
     - "gigante"
     - "gigantes"
     - "giant"
+names:
+  - "Leon"
+  - "Rhys"
+  - "Ian"
+  - "Carson"
+  - "Arjun"
+  - "Winston"
+  - "Jesse"
+  - "Cedric"
+  - "Zane"
+  - "Luciano"
+  - "Gerald"
+  - "Kevin"
+  - "Korbin"
+  - "Aryan"
+  - "Elliott"
+  - "Deven"
+  - "Wyatt"
+  - "Amare"
+  - "Micheal"
+  - "Marcel"
+  - "Yusuf"
+  - "Jon"
+  - "Zachariah"
+  - "Enrique"
+  - "Rishi"
+  - "Ray"
+  - "Darrell"
+  - "Dylan"
+  - "Bennett"
+  - "Yosef"
+  - "Billy"
+  - "Dominique"
+  - "Desmond"
+  - "Braeden"
+  - "Deangelo"
+  - "Rory"
+  - "Brennan"
+  - "Aldo"
+  - "Darion"
+  - "Javier"
+  - "Colby"
+  - "Rashad"
+  - "Sawyer"
+  - "Antoine"
+  - "Jaxson"
+  - "Rocco"
+  - "Jamie"
+  - "Ross"
+  - "Noel"
+  - "Tanner"
+  - "Max"
+  - "Evan"
+  - "Gavin"
+  - "Zackery"
+  - "Lewis"
+  - "Zain"
+  - "Issac"
+  - "Zachery"
+  - "Aiden"
+  - "Kellen"
+  - "Jacob"
+  - "Harrison"
+  - "Axel"
+  - "Santos"
+  - "Yurem"
+  - "Dallas"
+  - "Steve"
+  - "Vaughn"
+  - "Keith"
+  - "Ahmad"
+  - "Jayce"
+  - "Jose"
+  - "Moses"
+  - "Cameron"
+  - "Isaias"
+  - "Isaac"
+  - "Johnathan"
+  - "Leo"
+  - "Trace"
+  - "Porter"
+  - "Malaki"
+  - "Keenan"
+  - "Roberto"
+  - "Michael"
+  - "Avery"
+  - "Royce"
+  - "Giovanny"
+  - "Tyree"
+  - "Messiah"
+  - "Tomas"
+  - "Tristin"
+  - "Fernando"
+  - "Moshe"
+  - "Giovani"
+  - "Stanley"
+  - "Denzel"
+  - "Clay"
+  - "Caiden"
+  - "Tyler"
+  - "Edward"
